# prompt2song

./: .gitignore  README.md  eval.md  generate_eval_plots.py
Final Report/: custom.bib  final_report.tex
Proposal LaTeX/: custom.bib  main.tex
frontend/: app.js  index.html  server.py  styles.css
notebooks/: 01_text_emotion_encoder.ipynb  02_audio_encoder_and_fusion.ipynb  03_contrastive_retrieval.ipynb  PIPELINE_OVERVIEW.md  spotify_lyrics_dataset.ipynb  text_emotion_encoder.ipynb
prompt2song_service/: README.md  config.yaml  pyproject.toml
prompt2song_service/src/prompt2song/: __init__.py  cli.py  config.py  data.py  encoder.py  exporter.py  recommender.py  rlhf.py  service.py
prompt2song_service/src/prompt2song.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
